# Python-Core

./: .gitignore  .pylintrc  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  ci.sh  convention_checking.sh  databricks.yml  docker-compose.yml  main.ipynb  main.py  nb_main.ipynb  pyproject.toml  requirements.txt  setup.cfg  validators.sh
.github/: pull_request_template.md
.github/workflows/: github-actions-demo.yml  github-ci.yml  run_all_tests_manually.yml  verify_changes.yml
ApiCaller/: config.py  main.py
ApiCaller/models/: Bored.py
Coroutines and Tasks/: coroutine.py  demo_multiprocessing.py  demo_multithreading.py  locks_to_deal_with_race_condition.py  race_condition_problem.py
EDA/: eda_dataframe.py
EDA/data/: file2.csv
Libs/: requirements.txt
Multiprocessing/: CustomProcessClass.py  README.md  condition_notify.py  demo_multithreading.py  mutex_lock.py  race_condition_problem.py  semaphore.py
__name__ in Python/: main.py  my_program.py
__name__ in_python/: main.py  my_program.py
ci/: ci.sh  githooks.sh  requirements.txt
configs/: .pre-commit-config.yaml
coroutines_and_tasks/: coroutine.py  demo_multiprocessing.py  locks_to_deal_with_race_condition.py
crawl_website/: CTTBK_Student_Group_Info.csv  CTTBK_Student_Group_Info.html  main.py
crawl_website/CTTBK_Student_Group_Info_files/: DXR(1).axd  DXR.axd  Site.css  css  docs.min.css
data_hub/: datahub.py
data_hub/tests/: test_datahub.py
datetime_range/: DataTimeRange.py
git_python/: git_python.ipynb
goto_xy/: main.py
hash_table/: hash_distribution.py  hash_function.py  hash_table.py  main.py  test_hashtable.py
hdfs_tree_paths/tests/: test_hdfs_tree_paths.py
merge_hdfs_files/: hdfs_tree_paths.py
merge_hdfs_files/tests/: test_hdfs_tree_paths.py
named_entity_recognition/: NER.ipynb
project_packaging/: MANIFEST.in  setup.cfg
project_packaging/mrroot501/: mrroot501_libs.py
pyspark/: Intro Spark on python.ipynb  etl_lab.ipynb
python-dotenv/: README.md  settings.py
read_keyboard/: main.pyw
schema_registry/: schema-registry.md  schema_registry.py
scripts/ci/: ci.sh  githooks.sh  requirements-ci.txt  requirements.txt
shuffle_csv/: CSVShuffler.py  input.txt  output.txt
spark-sql/: README.txt  run_spark-sql.py  spark-sql_datetime.sql
spark-sql/tables/: t1.csv  t2.csv
src/calculate_statistics/: BUILD  BUILD.bazel  main.py  run.sh  weather_stations.csv
src/chat_gpt/: chat_gpt.ipynb
src/common/calculate_quantile/: BUILD  BUILD.bazel  calculate_quantile.py
src/common/calculate_quantile/tests/: test_calculate_quantile.py
src/common/chat_gpt/: gpt_helper.py
src/data_hub/: datahub.py
src/data_hub/tests/: test_datahub.py
src/datahub/: BUILD  datahub.py
src/datahub/tests/: test_datahub.py
src/eda_sample/: eda_dataframe.ipynb  sweetviz.ipynb
src/git_python/: BUILD  git_ci.py  git_python.ipynb
src/git_python/tests/: test_git_ci.py
src/hdfs_tree_paths/: BUILD  hdfs_tree_paths.py
src/hdfs_tree_paths/tests/: test_hdfs_tree_paths.py
src/k_means_clustering/: kmeans.ipynb
src/notebook/ActivityTracking/: activity_tracking.csv  main.ipynb
src/notebook/CountingSubjectsForEachStateCode/: input.txt
src/notebook/SparkLocal/: spark_local.ipynb
src/notebook/counting_subjects_for_each_state_code/: main.ipynb
src/notebook/databricks/: nb_databricks.ipynb
src/notebook/sample/: main.ipynb
src/notebook/spark/: nb_spark_local.ipynb
src/parquet_modular_encryption/: BUILD.bazel  kms_client.py  pme.ipynb  pme_utils.py
src/parquet_modular_encryption/tests/: test_kms_client.py  test_pme_utils.py
src/pme/: pme.ipynb
src/pool_api/: BUILD  Dockerfile  README.md
src/pool_api/api/: BUILD.bazel  application.py  pool_api.py
src/pool_api/api/pool/: pool_api.py  router.py
src/pool_api/api/pool/tests/: test_pool_api.py  test_router.py
src/pool_api/api/tests/: test_application.py  test_pool_api.py
src/pool_api/api/tests/integration/: test_pool_api.py
src/pool_api/dto/: __init__.py  pool_statistics_get_response.py  pool_upsert_response.py
src/pool_api/integration_tests/: test_pool_api.py
src/pool_api/repositories/: BUILD.bazel  __init__.py  data_manager.py
src/pool_api/repositories/models/: pool_entity.py
src/pool_api/repositories/tests/: test_data_manager.py
src/pool_api/services/: BUILD.bazel  __init__.py  pool_service.py
src/pool_api/services/tests/: test_pool_service.py
src/schema_registry/: BUILD.bazel  schema-registry.md  schema_registry.py
src/schema_registry/tests/: test_schema_registry.py
src/unittest_async/: BUILD.bazel  README.md  main.py
src/unittest_async/data/: output.txt
src/unittest_async/tests/: test_main.py
src/web_crawler/: BUILD.bazel  crawler_engine.py  foreign_exchange.ipynb  gold_prices.ipynb
src/web_crawler/data/foreign_exchange/: 20240101_20240131.csv  20240201_20240229.csv  20240301_20240331.csv  20240401_20240430.csv  20240501_20240531.csv  20240601_20240618.csv
src/web_crawler/data/gold_prices/: 20150101_20240618.csv  20240401-20150101.csv  20240407-20240401.csv
src/web_crawler/tests/: test_crawler_engine.py
traverse-folder/: main.ipynb
unittest_async/tests/: test_main.py
web_crawler/: gold_prices.ipynb
web_crawler/data/gold_prices/: 20240409-20240408.csv
